template.yml
Parameters:
  MoodlePublicAvailabilityZone:
    Type: AWS::EC2::AvailabilityZone::Name
    Description: Subnet Availability Zone
Resources:
  MoodleVpc:
    Type: AWS::EC2::VPC
    Properties:
      CidrBlock: 10.0.0.0/27
      EnableDnsSupport: true
      EnableDnsHostnames: true
      Tags:
        - Key: stack
          Value: production
  MoodleSubnetPublic:
    Type: AWS::EC2::Subnet
    Properties:
      AvailabilityZone: !Ref MoodlePublicAvailabilityZone
      CidrBlock: 10.0.0.0/27
      MapPublicIpOnLaunch: true
      VpcId: !Ref MoodleVpc
  MoodleInternetGateway:
    Type: AWS::EC2::InternetGateway
  MoodleInternetGatewayAttach:
    Type: AWS::EC2::VPCGatewayAttachment
    Properties:
      InternetGatewayId: !Ref MoodleInternetGateway
      VpcId: !Ref MoodleVpc
  MoodleRouteTable:
    Type: AWS::EC2::RouteTable
    DependsOn: MoodleInternetGatewayAttach
    Properties:
      VpcId: !Ref MoodleVpc
  MoodleRouteTableDefault:
    Type: AWS::EC2::Route
    Properties:
      DestinationCidrBlock: 0.0.0.0/0
      GatewayId: !Ref MoodleInternetGateway
      RouteTableId: !Ref MoodleRouteTable
  MoodleRouteTableAssociationSubnetPublic:
    Type: AWS::EC2::SubnetRouteTableAssociation
    Properties:
      RouteTableId: !Ref MoodleRouteTable
      SubnetId: !Ref MoodleSubnetPublic
  MoodleSecurityGroupWeb:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: Enable HTTP/HTTPS
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0
        - IpProtocol: tcp
          FromPort: 443
          ToPort: 443
          CidrIp: 0.0.0.0/0
      VpcId: !Ref MoodleVpc
